--- a/index8.html
+++ b/index8.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230904221153"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230904221153"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230904221153"></script>
-  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230904221153"></script>
-  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230904221153"></script>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230904235658"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230904235658"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230904235658"></script>
+  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230904235658"></script>
+  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230904235658"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230904221153"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230904235658"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
-  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230904221153"
+  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230904235658"
   rel="stylesheet">
 
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230904221153">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230904235658">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230904221153"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230904235658"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230904221153" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230904235658" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -82,8 +82,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230904221153" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230904221153"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230904235658" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230904235658"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   <main id="swup" class="transition-fade">
@@ -288,6 +288,8 @@
                 <div class="col-6 mob_on_full">
                   <h2>Target audience ></h2>
                 </div>
+              </div>
+              <div class="row">
                 <div class="col-6 mob_on_full">
                   <p>The target audience for Friesa includes movie enthusiasts and social media-savvy individuals who are
                     looking for a
@@ -321,7 +323,7 @@
             <div class="row comments">
               <div class="col-5 mob_on_obj">
                 <div class="avatar avatarCenter_mob">
-                  <picture><source srcset="img/memoji_1.webp" type="image/webp"><img src="img/memoji_1.png" alt=""></picture>
+                  <picture><source srcset="img/senator_avatar.webp" type="image/webp"><img src="img/senator_avatar.jpg" alt=""></picture>
                 </div>
                 <p>"When I go to the Aston Martin website, I always expect to experience luxury and upmarket, but something is
                   always
@@ -330,7 +332,7 @@
               <div class="col-1 mob_off_obj"></div>
               <div class="col-6 mob_on_obj">
                 <div class="avatar avatarLeft avatarCenter_mob">
-                  <picture><source srcset="img/memoji_2.webp" type="image/webp"><img src="img/memoji_2.png" alt=""></picture>
+                  <picture><source srcset="img/senator_avatar_2.webp" type="image/webp"><img src="img/senator_avatar_2.jpg" alt=""></picture>
                 </div>
                 <p>"I opened their website and it seems like the pages take forever to load! I can't wait to view the models."</p>
               </div>
@@ -338,7 +340,7 @@
               <div class="col-5 mob_off_obj"></div>
               <div class="col-5 mob_on_obj">
                 <div class="avatar avatarLeft avatarCenter_mob">
-                  <picture><source srcset="img/memoji_3.webp" type="image/webp"><img src="img/memoji_3.png" alt=""></picture>
+                  <picture><source srcset="img/senator_avatar_3.webp" type="image/webp"><img src="img/senator_avatar_3.jpg" alt=""></picture>
                 </div>
                 <p>"I have visited their website several times, but I always get lost in the pile of information! I can't find
                   what I'm
@@ -349,7 +351,7 @@
               <div class="col-2 mob_off_obj"></div>
               <div class="col-5 mob_on_obj">
                 <div class="avatar avatarCenter_mob">
-                  <picture><source srcset="img/memoji_4.webp" type="image/webp"><img src="img/memoji_4.png" alt=""></picture>
+                  <picture><source srcset="img/senator_avatar_4.webp" type="image/webp"><img src="img/senator_avatar_4.jpg" alt=""></picture>
                 </div>
                 <p>"Where can I customize the car the way I need it?"</p>
               </div>
@@ -359,7 +361,7 @@
           
                 <div class="col-5 mob_on_obj avatarCenter_last">
                   <div class="avatar avatarCenter_mob ">
-                    <picture><source srcset="img/memoji_5.webp" type="image/webp"><img src="img/memoji_5.png" alt=""></picture>
+                    <picture><source srcset="img/senator_avatar_5.webp" type="image/webp"><img src="img/senator_avatar_5.jpg" alt=""></picture>
                   </div>
                   <p>"Planning to buy an Aston Martin, but I'm not sure how to go about it. Where can I find information about
                     dealers and
@@ -488,7 +490,7 @@
                 <div class="col-10 position-relative">
                   <h3 class="text-center">Next Project</h3>
                 <a href="index9.html">
-                  <picture><source srcset="img/Fs_home.webp" type="image/webp"><img id="img_main_7" class="mobile_pic" src="img/Fs_home.jpg" alt=""></picture>
+                  <picture><source srcset="img/fybridS_main_2.webp" type="image/webp"><img id="img_main_7" class="mobile_pic" src="img/fybridS_main_2.jpg" alt=""></picture>
                 </a>
                   <div class="row row_info_main">
                     <div class="col-6">
@@ -508,7 +510,7 @@
                 </div>
                 <div class="back_blur">
                   <div class="position-relative">
-                    <span class="blur_obj blur_obj_senator"></span>
+                    <span class="blur_obj blur_obj_fybrid"></span>
                   </div>
                 </div>
               </div>
@@ -525,8 +527,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230904221153"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230904221153"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230904235658"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230904235658"></script> -->
 
 
 
@@ -537,16 +539,16 @@
 
 
 
-<script src="files/script /swup.js?_v=20230904221153"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230904221153"></script>
+<script src="files/script /swup.js?_v=20230904235658"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230904235658"></script>
 
-<script src="files/script /tilt.js?_v=20230904221153"></script>
-<script type="module" src="files/script /script.js?_v=20230904221153"></script>
+<script src="files/script /tilt.js?_v=20230904235658"></script>
+<script type="module" src="files/script /script.js?_v=20230904235658"></script>
 
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230904221153"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230904235658"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
