--- a/index9.html
+++ b/index9.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230904221153"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230904221153"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230904221153"></script>
-  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230904221153"></script>
-  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230904221153"></script>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230904235658"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230904235658"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230904235658"></script>
+  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230904235658"></script>
+  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230904235658"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230904221153"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230904235658"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
-  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230904221153"
+  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300;600;700&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230904235658"
   rel="stylesheet">
 
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230904221153">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230904235658">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230904221153"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230904235658"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230904221153" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230904235658" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -82,8 +82,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230904221153" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230904221153"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230904235658" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230904235658"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   
@@ -342,6 +342,8 @@
               <div class="col-12">
                 <h2>Target audience ></h2>
               </div>
+              </div>
+              <div class="row">
               <div class="col-2"></div>
               <div class="col-6 mob_on_full">
                 <p>The target audience for Model Kiev consists of individuals seeking exceptional model selection services. This
@@ -467,17 +469,17 @@
                 <picture><source srcset="img/fybrid_page_1.webp" type="image/webp"><img width="100%" src="img/fybrid_page_1.jpg" alt=""></picture>
               </div>
               <div class="col-10">
-                <h2>LANDING PAGE</h2>
+                <h2>AUTHOR BLOG</h2>
                 <h3>lorem ipsum hey</h3>
                 <picture><source srcset="img/fybrid_page_2.webp" type="image/webp"><img width="100%" src="img/fybrid_page_2.jpg" alt=""></picture>
               </div>
               <div class="col-10">
-                <h2>LANDING PAGE</h2>
+                <h2>INDIVIDUAL PROJECT</h2>
                 <h3>lorem ipsum hey</h3>
                 <picture><source srcset="img/fybrid_page_3.webp" type="image/webp"><img width="100%" src="img/fybrid_page_3.jpg" alt=""></picture>
               </div>
               <div class="col-10">
-                <h2>LANDING PAGE</h2>
+                <h2>WEBSHOP</h2>
                 <h3>lorem ipsum hey</h3>
                 <picture><source srcset="img/fybrid_page_4.webp" type="image/webp"><img width="100%" src="img/fybrid_page_4.jpg" alt=""></picture>
               </div>
@@ -630,8 +632,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230904221153"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230904221153"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230904235658"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230904235658"></script> -->
 
 
 
@@ -642,16 +644,16 @@
 
 
 
-<script src="files/script /swup.js?_v=20230904221153"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230904221153"></script>
+<script src="files/script /swup.js?_v=20230904235658"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230904235658"></script>
 
-<script src="files/script /tilt.js?_v=20230904221153"></script>
-<script type="module" src="files/script /script.js?_v=20230904221153"></script>
+<script src="files/script /tilt.js?_v=20230904235658"></script>
+<script type="module" src="files/script /script.js?_v=20230904235658"></script>
 
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230904221153"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230904235658"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
